--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,10 @@
+###
+ # @LastEditors: John
+ # @Date: 2024-06-18 10:12:21
+ # @LastEditTime: 2024-06-19 15:52:17
+ # @Author: John
+### 
 VITE_BASE_API_URL=/dev
+VITE_PARTICIPATE_CHAIN_ID=97
+VITE_NETWORK_USDT_ADDRESS=0x204074AD198E7c6e79E195DAf576bc7D53967B45
+VITE_CHECK_TRANSACTION_DETAILS_URL=https://testnet.bscscan.com/
