--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "@tanstack/react-query": "^5.45.1",
     "@web3modal/wagmi": "^5.0.2",
     "antd-mobile": "^5.36.1",
+    "clsx": "^2.1.1",
     "i18next": "^23.11.5",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.2",
     "react-router-dom": "^6.23.1",
+    "tailwind-merge": "^2.3.0",
+    "vconsole": "^3.15.1",
     "viem": "^2.14.2",
     "wagmi": "^2.10.2",
     "zustand": "^4.5.2"
@@ -41,6 +45,7 @@
     "postcss": "^8.4.38",
     "postcss-pxtorem": "5.1.1",
     "react-iconfont-cli": "^2.0.2",
+    "styled-components": "^6.1.11",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vite-plugin-compression": "^0.5.1",
