--- a/.env.development
+++ b/.env.development
@@ -1,10 +1,12 @@
 ###
  # @LastEditors: John
  # @Date: 2024-06-18 10:12:21
- # @LastEditTime: 2024-06-19 15:52:17
+ # @LastEditTime: 2024-06-22 11:22:13
  # @Author: John
 ### 
+VITE_BASE_URL=http://192.168.10.167:5173/
 VITE_BASE_API_URL=/dev
 VITE_PARTICIPATE_CHAIN_ID=97
-VITE_NETWORK_USDT_ADDRESS=0x204074AD198E7c6e79E195DAf576bc7D53967B45
+VITE_PURCHASED_CONTRACT_ADDRESS=0x37644e2E1Ac2D0b87f693Ad64A154f3A7fe09b93
+VITE_NETWORK_USDT_ADDRESS=0xACFE3DF8ACeF83De51d53E22ADE30F18eaB4969A
 VITE_CHECK_TRANSACTION_DETAILS_URL=https://testnet.bscscan.com/
