--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
+VITE_BASE_URL=/
 VITE_BASE_API_URL=/dev
 VITE_PARTICIPATE_CHAIN_ID=56
 VITE_NETWORK_USDT_ADDRESS=0x55d398326f99059ff775485246999027b3197955
