--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hyper-fetch/react": "^5.7.5",
     "@tanstack/react-query": "^5.45.1",
     "@web3modal/wagmi": "^5.0.2",
+    "ahooks": "^3.8.0",
     "antd-mobile": "^5.36.1",
     "clsx": "^2.1.1",
     "i18next": "^23.11.5",
@@ -28,6 +29,7 @@
     "vconsole": "^3.15.1",
     "viem": "^2.14.2",
     "wagmi": "^2.10.2",
+    "web3-utils": "^4.3.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
