--- a/.env.development
+++ b/.env.development
@@ -1,10 +1,10 @@
 ###
  # @LastEditors: John
  # @Date: 2024-06-18 10:12:21
- # @LastEditTime: 2024-06-25 14:04:33
+ # @LastEditTime: 2024-06-27 15:35:23
  # @Author: John
 ### 
-VITE_BASE_URL=http://192.168.10.167:5173/
+VITE_BASE_URL=
 VITE_BASE_API_URL=/dev
 VITE_PARTICIPATE_CHAIN_ID=97
 VITE_PURCHASED_CONTRACT_ADDRESS=0x7aAe4f2CA23482B58D6f9e8d1fBb5e413e7013c8
