--- a/.env.test
+++ b/.env.test
@@ -1,12 +1,13 @@
 ###
  # @LastEditors: John
  # @Date: 2024-06-24 18:38:45
- # @LastEditTime: 2024-06-25 14:04:37
+ # @LastEditTime: 2024-07-02 16:49:31
  # @Author: John
 ### 
 VITE_BASE_URL=http://wwwtest.exgo.pro
 VITE_BASE_API_URL=http://wwwtest.exgo.pro
 VITE_PARTICIPATE_CHAIN_ID=97
 VITE_PURCHASED_CONTRACT_ADDRESS=0x7aAe4f2CA23482B58D6f9e8d1fBb5e413e7013c8
+VITE_RECEIVE_RAMB_CONTRACT_ADDRESS=0x8291A98382d751CdD52460A547eE94ceE8258930
 VITE_NETWORK_USDT_ADDRESS=0xf9A18B7FC8Eb118f8Ad59fBD6eb1A181eaCb4E63
 VITE_CHECK_TRANSACTION_DETAILS_URL=https://testnet.bscscan.com/
