--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,11 @@
 ###
  # @LastEditors: John
+ # @Date: 2024-07-02 11:31:07
+ # @LastEditTime: 2024-07-03 10:21:21
+ # @Author: John
+### 
+###
+ # @LastEditors: John
  # @Date: 2024-06-18 10:12:21
  # @LastEditTime: 2024-07-02 16:46:51
  # @Author: John
@@ -8,6 +14,6 @@ VITE_BASE_URL=
 VITE_BASE_API_URL=/dev
 VITE_PARTICIPATE_CHAIN_ID=97
 VITE_PURCHASED_CONTRACT_ADDRESS=0x7aAe4f2CA23482B58D6f9e8d1fBb5e413e7013c8
-VITE_RECEIVE_RAMB_CONTRACT_ADDRESS=0x8291A98382d751CdD52460A547eE94ceE8258930
+VITE_RECEIVE_RAMB_CONTRACT_ADDRESS=0x944fBF12c9b77BFfFA223CE1568F28820d319c2F
 VITE_NETWORK_USDT_ADDRESS=0xf9A18B7FC8Eb118f8Ad59fBD6eb1A181eaCb4E63
 VITE_CHECK_TRANSACTION_DETAILS_URL=https://testnet.bscscan.com/
