--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,11 @@
+###
+ # @LastEditors: John
+ # @Date: 2024-07-02 11:31:07
+ # @LastEditTime: 2024-07-18 17:35:13
+ # @Author: John
+### 
 VITE_BASE_URL=/
-VITE_BASE_API_URL=/dev
+VITE_BASE_API_URL=/api
 VITE_PARTICIPATE_CHAIN_ID=56
 VITE_PURCHASED_CONTRACT_ADDRESS=
 VITE_NETWORK_USDT_ADDRESS=
