--- a/.env.production
+++ b/.env.production
@@ -1,12 +1,13 @@
 ###
  # @LastEditors: John
  # @Date: 2024-07-02 11:31:07
- # @LastEditTime: 2024-07-18 17:35:13
+ # @LastEditTime: 2024-07-19 14:39:15
  # @Author: John
 ### 
 VITE_BASE_URL=/
-VITE_BASE_API_URL=/api
+VITE_BASE_API_URL=
 VITE_PARTICIPATE_CHAIN_ID=56
-VITE_PURCHASED_CONTRACT_ADDRESS=
-VITE_NETWORK_USDT_ADDRESS=
+VITE_PURCHASED_CONTRACT_ADDRESS=0xb8D623B24b6A9B7044C078B80c90B292e5b2ee13
+VITE_RECEIVE_RAMB_CONTRACT_ADDRESS=0x40b07C2944390f11bc14acF89710Bd7228Aca9bE
+VITE_NETWORK_USDT_ADDRESS=0x55d398326f99059fF775485246999027B3197955
 VITE_CHECK_TRANSACTION_DETAILS_URL=https://bscscan.com/
